--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <script src="script.js"></script>
   </head>
   <body ng-controller="SeguroController">
+    <h1>Seguro dentaaaal</h1>
     <form>
       <fieldset>
         <legend>Seguro Médico</legend>
-          <label for="NIF">NIF:</label><input id="nif" name="nif" type="text" ng-model="seguro.nif" /><br>
+          <label for="nif">NIF:</label><input id="nif" name="nif" type="text" ng-model="seguro.nif" /><br>
           <label for="nombre">Nombre:</label><input id="nombre" name="nombre" type="text" ng-model="seguro.nombre" /><br>
           <label for="ape1">1º Apellido:</label><input id="ape1" name="ape1" type="text" ng-model="seguro.ape1" /><br>
           <label for="edad">Edad:</label><input id="edad" name="edad" type="text" ng-model="seguro.edad" /><br>
