--- a/index.html
+++ b/index.html
@@ -1,66 +1,85 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="es" ng-app="gifwalletApp">
 
-<html ng-app="app">
-  <head>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
-    <script src="script.js"></script>
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/app.css">
 
-  <body ng-controller="SeguroController">
-    <h1>Seguro dentaaaal</h1>
-    <form>
+    <script src="javascripts/angularjs.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-      <fieldset>
+    <script src="src/app.js"></script>
+    <title>GIF Wallet</title>
+</head>
 
-        <legend>Seguro Médico</legend>
-
-          <label for="nif">NIF:</label><input id="nif" name="nif" type="text" ng-model="seguro.nif" /><br>
-
-          <label for="nombre">Nombre:</label><input id="nombre" name="nombre" type="text" ng-model="seguro.nombre" /><br>
-
-          <label for="ape1">1º Apellido:</label><input id="ape1" name="ape1" type="text" ng-model="seguro.ape1" /><br>
-
-          <label for="edad">Edad:</label><input id="edad" name="edad" type="text" ng-model="seguro.edad" /><br>
-
-          <label for="sexo">Sexo:</label><select id="sexo" name="sexo" type="checkbox" ng-model="seguro.sexo" ><option value="">--Elige opcion--</option><option value="H">Hombre</option><option value="M">Mujer</option></select><br>
-
-          <label for="casado">Casado:</label><input id="casado" name="casado" type="checkbox" ng-model="seguro.casado" /><br>
-
-          <label for="numHijos">Nº Hijos:</label><input id="numHijos" name="numHijos" type="text" ng-model="seguro.numHijos" /><br>
-
-          <label for="embarazada">Embarazada:</label><input id="embarazada" name="embarazada" type="checkbox" ng-model="seguro.embarazada" /><br>
-
-          <label for="fechaCreacion">Fecha de creaci&oacute;n:</label><input id="fechaCreacion" name="fechaCreacion" type="text" ng-model="seguro.fechaCreacion" /><br>
-
-      </fieldset>
-
-      <fieldset>
-
-        <legend>Coberturas</legend>
-
-          <label for="oftalmologia">Oftalmologia:</label><input id="oftalmologia" name="oftalmologia" type="checkbox" ng-model="seguro.coberturas.oftalmologia" /><br>
-
-          <label for="dental">Dental:</label><input id="dental" name="dental" type="checkbox" ng-model="seguro.coberturas.dental" /><br>
-
-          <label ng-show="seguro.sexo==='M'" for="fecundacionInVitro">Fecundacion In Vitro:</label><input ng-show="seguro.sexo==='M'" id="fecundacionInVitro" name="fecundacionInVitro" type="checkbox" ng-model="seguro.coberturas.fecundacionInVitro" /><br>
-
-      </fieldset>      
-
-      <fieldset>
-
-      <legend>Enfermedades</legend>
-
-          <label for="corazon">Corazon:</label><input id="corazon" name="corazon" type="checkbox" ng-model="seguro.enfermedades.corazon" /><br>
-
-          <label for="estomacal">Estomacal:</label><input id="estomacal" name="estomacal" type="checkbox" ng-model="seguro.enfermedades.estomacal" /><br>
-
-          <label for="rinyones">Ri&ntilde;ones:</label><input id="rinyones" name="rinyones" type="checkbox" ng-model="seguro.enfermedades.rinyones" /><br>
-
-          <label for="alergia">Alergia:</label><input id="alergia" name="alergia" type="checkbox" ng-model="seguro.enfermedades.alergia" /><br>
-
-          <label for="nombreAlergia">Nombre de la alergia:</label><input ng-disabled="seguro.enfermedades.alergia===false" id="nombreAlergia" name="nombreAlergia" type="text" ng-model="seguro.enfermedades.nombreAlergia" /><br>
-
-      </fieldset> 
+<body>
+    <div class="container">
+        <header ng-controller="MenuController">
+            <ul class="nav nav-pills pull-right">
+                <li class="active">
+                    <a href="#">
+                        <span class="glyphicon glyphicon-home"></span> &nbsp;
+                      <span class="badge pull-right">42</span> 
+                    </a>
+                </li>
+                <li>
+                    <a href="#" ng-click="add()"><span class="glyphicon glyphicon-plus"></span></a>
+                </li>
+                <li>
+                    <a href=""><span class="glyphicon glyphicon-search"></span></a>
+                </li>
+            </ul>
+            <h3 class="text-muted">GIF Wallet</h3>
+                <script type="text/ng-template" id="add_gif.html">
+                    <div class="modal-header">
+    <h3 class="modal-title">Agregar GIF</h3>    
+    <p class="text-muted">Añade un gif favorito a tu wallet usando el nombre y la URL</p>
+</div>
+<div class="modal-body">
+    <form action="" role="form" name="addGif">
+        <div class="form-group">
+            <label for="name">Nombre</label>
+            <input type="text" id="name" ng-model="Gif.name" placeholder="Corgi bailarín" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="url">URL</label>
+            <input type="url" id="url" ng-model="Gif.url" placeholder="http://..." class="form-control">
+        </div>
     </form>
-  </body>
+</div>
+<div class="modal-footer">
+    <button class="btn btn-link" ng-click="cancel()">Cancelar</button>
+    <button class="btn btn-primary" ng-click="save()">Agregar GIF</button>
+</div>
+            </script>
+        </header>
+
+        <div id="images" class="row" ng-controller="GifListController">
+            <div class="col-lg-12 media" ng-repeat="(key, gif) in giflist">
+                <a href="" class="pull-left thumbnail">
+                    <img class="media-object" src="{{ gif.url }}" width="200">
+                </a>
+                <div class="media-object">
+                    <h4 class="media-heading">{{ gif.name }}</h4>
+                    <p>
+                        <a><span class="glyphicon glyphicon-minus"></span> Eliminar</a>
+                    </p>    
+                    <p>
+                        <favorite favorite="{{ gif.favorite }}" key="{{ key }}"></favorite>
+                    </p>
+                    <p>
+                        Link: <a href="">{{ gif.url }}</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <p>&copy; GIFWallet 2014</p>
+        </footer>
+    </div>
+</body>
+
 </html>
